# PECS-1D

./: CMakeLists.txt  README  README.md
ConcentrationProfiles/: ConcentrationProfiles.cpp
doc/: dox
documentation/: README.md
include/: Utilities.hpp  carrier.hpp  ddpComputeDeltaT.hpp  ddpPrintState.hpp  ddpTimeStepping.hpp  dopingprofile.hpp  includes.hpp  main.hpp  makeProperties.hpp  matrixSetUp.hpp  vectorSetUp.hpp
run/: Run.py  Runner_IV.py  clean.sh  ddp-input.ini  plotter.py
src/: A_IMEXEX.cpp  A_IMIMEX.cpp  CTU_IMEX.cpp  Error_Plotter.py  IV_Script_CTU_IMEX.py  IV_Script_PU_IMEX.py  IV_Script_Schottky.py  Implicit_Mesfet.cpp  Implicit_Schottky.cpp  L2_Errors.cpp  L2_Schwarz_Errors.cpp  PU_IMEXEX.cpp  SimulationConditions.cpp  SimulationConditions.hpp  TS_PU_IMEXEX.cpp  Utilities.cpp  Utilities.hpp  VandeMondeSetUp.cpp  VandeMondeSetUp.hpp  basis.cpp  basis.hpp  bipolar.py  carrier.cpp  carrier.hpp  ddp-input.ini  ddpComputeDeltaT.cpp  ddpComputeDeltaT.hpp  ddpPrintState.cpp  ddpPrintState.hpp  ddpRecombination.cpp  ddpRecombination.hpp  ddpTimeStepping.cpp  ddpTimeStepping.hpp  dopingprofile.cpp  dopingprofile.hpp  includes.hpp  interface.py  interface_movies.py  main.hpp  makeProperties.cpp  (+21 more)
